# train-model-agent

./: .env.example  README.md  main.py  pyproject.toml
src/: agent.py  dataset.py  deep_trainer.py  interactive_agent.py  multi_agent.py  rule_agent.py  strategy.py  trainer.py  visualizer.py
src/tools/: definitions.py  executor.py
